2018-11-07  Carl Hetherington  <cth@carlh.net>

	* Add button to force re-encode of JPEG2000 content.

2018-10-23  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

2018-10-16  Carl Hetherington  <cth@carlh.net>

	* Updated it_IT translation from Riccardo Mantani.

2018-10-14  Carl Hetherington  <cth@carlh.net>

	* Give a better reason for not referring to DCPs
	when there is a resolution mismatch.

2018-09-27  Carl Hetherington  <cth@carlh.net>

	* Updated it_IT translation from Riccardo Mantani.

2018-09-14  Carl Hetherington  <cth@carlh.net>

	* Very basic logging in player.

	* Basic dual-screen mode for player.

2018-09-11  Carl Hetherington  <cth@carlh.net>

	* Full-screen mode for player (#1329).

2018-09-10  Carl Hetherington  <cth@carlh.net>

	* Basic export of multiple reels to multiple files.

2018-09-09  Carl Hetherington  <cth@carlh.net>

	* Updated fr_FR translation from Thierry Journet.

2018-09-07  Carl Hetherington  <cth@carlh.net>

	* Updated cs_CZ translation from Tomáš Begeni.

2018-09-03  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

2018-08-22  Carl Hetherington  <cth@carlh.net>

	* Disable the whole interface during audio analysis (#1278).

2018-08-20  Carl Hetherington  <cth@carlh.net>

	* Updated ru_RU and uk_UA translations from Igor Voytovich.

2018-08-16  Carl Hetherington  <cth@carlh.net>

	* Add pause/resume to the batch converter (#1248).

2018-08-15  Carl Hetherington  <cth@carlh.net>

	* Support download of Barco Alchemy, Christie and GDC certificates
	from their FTP site.

2018-07-20  Carl Hetherington  <cth@carlh.net>

	* Advanced configuration option to allow any container ratio.

	* Support closed-caption creation (#725).

2018-07-19  Carl Hetherington  <cth@carlh.net>

	* Updated fr_FR translation from Thierry Journet.

2018-07-18  Carl Hetherington  <cth@carlh.net>

	* Updated de_DE translation from Carsten Kurz.
