@@ -341,8 +341,8 @@ def dependencies(target):
         # Use distro-provided FFmpeg on Arch
         deps = []
 
-    deps.append(('libdcp', '7930f76'))
-    deps.append(('libsub', '7bf99dc'))
+    deps.append(('libdcp', '27e1378'))
+    deps.append(('libsub', '2728525'))
     deps.append(('rtaudio-cdist', '739969e'))
 
     return deps
